--- a/website/index.html
+++ b/website/index.html
@@ -23,6 +23,9 @@
 
     <!-- body -->
     <div class="">
+        <section class="container-fluid">
+            
+        </section>
 
     </div>
 
