--- a/website/index.html
+++ b/website/index.html
@@ -22,9 +22,19 @@
     </div>
 
     <!-- body -->
-    <div class="">
-        <section class="container-fluid">
-            
+    <div class="p-5">
+        <section class="container border-top border-light p-5">
+            <img src="https://picsum.photos/300" alt="" class="rounded-circle float-end mx-4">
+            <h3>This First Heading <span class="text-secondary">Will Catch Your Eye</span></h3>
+            <p style="height: 250px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus velit soluta dolore aut adipisci amet ab voluptatem ipsam, similique commodi nostrum est consequatur atque ad quia hic sunt earum veritatis vero aliquid reiciendis inventore! Consequuntur qui saepe sequi enim ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Id esse, autem molestiae fuga placeat non pariatur fugit nemo repudiandae. Corporis maxime suscipit minima, dolore cum quos et odio cupiditate libero saepe modi eum vero magnam hic nobis quas eveniet molestias.
+            </p>
+        </section>
+
+        <section class="container border-top border-light p-5" >
+            <img src="https://picsum.photos/300" alt="" class="rounded-circle float-start me-4">
+            <h3>The Second Heading <span class="text-secondary">Is Pretty Cool Too</span></h3>
+            <p style="height: 250px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus velit soluta dolore aut adipisci amet ab voluptatem ipsam, similique commodi nostrum est consequatur atque ad quia hic sunt earum veritatis vero aliquid reiciendis inventore! Consequuntur qui saepe sequi enim ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt voluptas vitae quod odit assumenda labore consequatur fugit ab dolorem, debitis modi! Eos laboriosam modi quasi explicabo rerum, ad alias veniam, in, natus animi nam molestias aspernatur quod totam saepe sapiente.
+            </p>
         </section>
 
     </div>
