Cambio de color de fondo

--- a/website/index.html
+++ b/website/index.html
@@ -39,7 +39,7 @@
       </nav>
     </div>
 
-    <div style="background-image: url(./assets/img/header-background.jpg); width: 100%; height: 400px" class="container-fluid p-0">
+    <div style="background-image: url(./assets/img/bg.jpg); width: 100%; height: 600px; background-size: cover;" class="container-fluid p-0">
       <div style="vertical-align:middle;">
         <h1 class="text-white text-center fw-bold">One Page Wonder</h1>
         <h2 class="text-white text-center fw-bold">Will Knock Your Socks Off</h2>
