--- a/website/index.html
+++ b/website/index.html
@@ -39,10 +39,10 @@
       </nav>
     </div>
 
-    <div style="background-image: url(./assets/img/bg.jpg); width: 100%; height: 600px; background-size: cover;" class="container-fluid p-0">
-      <div style="vertical-align:middle;">
-        <h1 class="text-white text-center fw-bold">One Page Wonder</h1>
-        <h2 class="text-white text-center fw-bold">Will Knock Your Socks Off</h2>
+    <div style="background-image: url(./assets/img/bg.jpg); width: 100%; height: 600px; background-size: cover; background-position: center bottom;" class="container-fluid p-0">
+      <div class="d-flex flex-column justify-content-center h-100 px-3">
+        <h1 style="font-size: 6.5rem;" class="text-black text-center fw-bold bg-white">One Page Wonder</h1>
+        <h2 style="font-size: 3rem;"class="text-black text-center fw-bold bg-white">Will Knock Your Socks Off</h2>
       </div>
     </div>
 
